[project]
name = "renoun-mcp"
version = "1.1.0"
description = "Structural observability for AI conversations. Detects loops, stuck states, breakthroughs, and convergence patterns across 17 channels without analyzing content."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Luke / ReNoUn" }]
keywords = [
    "mcp",
    "conversation-analysis",
    "loop-detection",
    "agent-observability",
    "structural-analysis",
    "convergence-detection",
    "dialogue-health",
    "pattern-detection",
    "llm",
    "model-context-protocol",
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]
api = ["fastapi>=0.100.0", "uvicorn>=0.20.0", "stripe>=7.0.0"]
dev = ["pytest>=8.0.0", "ruff>=0.7.0", "httpx>=0.24.0"]

[project.urls]
Homepage = "https://github.com/renoun-framework/renoun-mcp"
Repository = "https://github.com/renoun-framework/renoun-mcp"
Issues = "https://github.com/renoun-framework/renoun-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
