[project]
name = "renoun-mcp"
version = "1.2.2"
description = "Structural observability for AI conversations. Detects loops, stuck states, breakthroughs, and convergence patterns across 17 channels without analyzing content."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Luke Hall", email = "98lukehall@gmail.com" }]
keywords = [
    "mcp",
    "conversation-analysis",
    "loop-detection",
    "agent-observability",
    "structural-analysis",
    "convergence-detection",
    "dialogue-health",
    "pattern-detection",
    "llm",
    "model-context-protocol",
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]
api = ["fastapi>=0.100.0", "uvicorn>=0.20.0", "stripe>=7.0.0"]
dev = ["pytest>=8.0.0", "ruff>=0.7.0", "httpx>=0.24.0"]

[project.scripts]
renoun-mcp = "server:main_sync"

[project.urls]
Homepage = "https://harrisoncollab.com"
Repository = "https://github.com/98lukehall/renoun-mcp"
Issues = "https://github.com/98lukehall/renoun-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["server.py", "api_client.py", "tool_definition.json", "api.py", "api_config.py", "auth.py", "rate_limiter.py", "usage.py", "stripe_billing.py", "pre_tag.py", "weighted_analysis.py", "renoun_analyze.py", "renoun_compare.py", "renoun_store.py", "renoun_format.py", "feature_extraction.py"]

[tool.hatch.build.targets.sdist]
include = ["server.py", "api_client.py", "tool_definition.json", "api.py", "api_config.py", "auth.py", "rate_limiter.py", "usage.py", "stripe_billing.py", "pre_tag.py", "weighted_analysis.py", "renoun_analyze.py", "renoun_compare.py", "renoun_store.py", "renoun_format.py", "feature_extraction.py", "pyproject.toml", "README.md", "LICENSE"]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
